# kg-io

./: Cargo.toml  README.md
benches/: reader_dispatch.rs
src/: error.rs  fs.rs  lib.rs  reader.rs
